# shangjizhixu-web

./: README.md
backend/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  watch_ocr.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_system_config_table.py  002_extend_user_role_length.py  6f4058347e5f_add_ocr_raw_question_and_ocr_raw_answer_.py
backend/app/: main.py
backend/app/api/v1/: auth.py  questions.py  system_config.py  upload.py  users.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  enums.py  question.py  system_config.py  user.py
backend/app/schemas/: __init__.py  common.py  question.py  system_config.py  upload.py  user.py
backend/app/services/: question_service.py  storage_service.py  system_config_service.py  user_service.py
backend/app/tasks/: llm_tasks.py  ocr_tasks.py
backend/app/utils/: __init__.py  markdown_converter.py
backend/scripts/: check_rewrite_versions.py  create_initial_users.py  create_question_submitter.py  init_db.py  migrate_ocr_raw_fields.py  reset_all_users.py  setup.sh  test_llm.py  update_llm_prompt.py  update_passwords.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/config/: constants.ts
frontend/src/hooks/: useAuth.ts  useConfig.ts  useQuestions.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  MyTasksPage.tsx  QuestionDetailPage.tsx  QuestionListPage.tsx  QuestionNewPage.tsx  QuestionOCREditPage.tsx  QuestionOCRReviewPage.tsx  QuestionRewriteEditPage.tsx  QuestionRewriteReviewPage.tsx  SystemConfigPage.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: api.ts  auth.service.ts  config.service.ts  question.service.ts  upload.service.ts  (+1 more)
(+4 files in other folders)
